wordpress/network-policy-wordpress-daily-report-allow-egress-loki.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-daily-report-allow-egress-loki
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wordpress-daily-report
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
